TimeSlots for Commerce 1.2.0-pl
----------------------------------
Released on 2022-11-25

- Add populate button to manually populate daily slots in addition to the automatic option. [#10]
- Add ability to select a slot by just the slot id. May be useful for customized templates. [#8]

TimeSlots for Commerce 1.1.2-pl
----------------------------------
Released on 2022-11-24

- Fix resolver

TimeSlots for Commerce 1.1.1-pl
----------------------------------
Released on 2022-11-24

- Add missing database table resolver

TimeSlots for Commerce 1.1.0-pl
----------------------------------
Released on 2022-11-24

- Add ability to automatically plan schedules on specific days [#9] - requires Commerce 1.3
- Add missing translation files
- Add snippet to render available timeslots as either grid or "order by".

TimeSlots for Commerce 1.0.0-pl
----------------------------------
Released on 2021-02-09

- First release